# sui

SuiLipse-main/: Cargo.toml
SuiLipse-main/apps/amm/: .gitignore  package-lock.json  package.json  vite.config.ts
SuiLipse-main/apps/amm/src/: App.vue  main.ts  router.ts
SuiLipse-main/apps/amm/src/components/: Card.vue  Form.vue  Home.vue  Nav.vue
SuiLipse-main/apps/amm/src/components/amm/: AmmCreate.vue
SuiLipse-main/apps/amm/src/components/coin/: CoinCreate.vue
SuiLipse-main/apps/amm/src/components/home/: Item.vue
SuiLipse-main/apps/amm/src/style/: index.scss
SuiLipse-main/apps/amm/src/sui/: coin.ts  coin_tx.ts  gateway.ts  object.ts
SuiLipse-main/programs/amm/: AMM_V2.md  Move.toml
SuiLipse-main/programs/amm/sources/: amm.move  amm_math.move  amm_pair.move  base64.move  jrk.move  nft_collection.move  sbt.move  uq128x128.move  uq64x64.move
SuiLipse-main/sui-client/: Cargo.toml
SuiLipse-main/sui-client/examples/: amm.rs  coin.rs
SuiLipse-main/sui-client/src/: lib.rs  main.rs
SuiLipse-main/sui-client/src/state/: mod.rs
SuiLipse-main/sui-client/tests/: amm.rs
